--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>防扣牌系統 (啟動提示版)</title>
+    <title>防扣牌預警系統</title>
     <style>
         /* --- 全域設定 --- */
         body {
