--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 </ul>
                 
                 <div class="help-footer">
-                    Web Version 1.1<br>Designed for Safe Driving
+                    作者:MiniKao<br>Web Version 1.1<br>Designed for Safe Driving
                 </div>
             </div>
         </div>
