--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     <button id="report-btn" onclick="quickMarkMissing()">📍 標記缺漏</button>
                 </div>
                 <div class="threshold-info">
-                    <div class="threshold-badge">扣牌: <span id="alarm-threshold-text">88</span></div>
+                    <div class="threshold-badge">扣牌標準: <span id="alarm-threshold-text">88</span></div>
                     <span id="limit-source-text" class="limit-source">等待 GPS...</span>
                 </div>
             </div>
