--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <div class="input-group">
             <label>系統資訊</label>
             <button class="drawer-btn" id="help-btn" onclick="showHelp()">ℹ️ 使用說明 / 關於</button>
+            <button class="drawer-btn" id="feedback-btn" style="margin-top:10px;color:black;"
+                onclick="window.open('https://forms.gle/3jtXHpBrBLAfVkwb9', '_blank')">💬 問題反饋 (Google 表單)</button>
         </div>
 
         <div class="input-group">
