--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     </div>
 
     <div class="main-container">
+        <button id="exit-hud-btn" onclick="toggleHud()">❌ 關閉 HUD</button>
         <div class="dashboard">
             <div id="mini-map-overlay">
                 <div id="realtime-map"></div>
