--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speed Defense System - 您的終極駕駛助手</title>
-    <meta name="description" content="Speed Defense System 是一款專為駕駛設計的防禦性駕駛輔助 App，提供即時速限提醒、缺漏標記回報等功能。">
+    <title>別扣我 - 您的智慧駕駛副駕</title>
+    <meta name="description" content="別扣我 (Speed Defense System) 是一款專為駕駛設計的防禦性駕駛輔助 App，提供即時速限提醒、缺漏標記回報等功能。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -19,7 +19,10 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <h1 class="logo">Speed Defense System</h1>
+            <a href="#" class="logo">
+                <img src="images/logo.png" alt="Logo" class="logo-img">
+                別扣我
+            </a>
             <div class="nav-links">
                 <a href="#features" class="nav-link">功能特色</a>
                 <a href="#gallery" class="nav-link">App 預覽</a>
@@ -131,7 +134,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2026 Speed Defense System. All rights reserved.</p>
+            <p>&copy; 2026 別扣我 (Speed Defense System). All rights reserved.</p>
         </div>
     </footer>
 </body>
