--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="nav-links">
                 <a href="#features" class="nav-link">功能特色</a>
                 <a href="#gallery" class="nav-link">App 預覽</a>
-                <a href="#join-beta" class="nav-cta">立即加入</a>
+                <a href="#download" class="nav-cta">免費下載</a>
             </div>
         </div>
     </nav>
@@ -34,47 +34,34 @@
     <header class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="hero-tagline">🚀 現正開放內測中</div>
+                <div class="hero-tagline">🚀 Google Play 正式上架</div>
                 <h2 class="hero-title">您的智慧駕駛<br>安全副駕</h2>
                 <p class="hero-subtitle">即時速限偵測 · 缺漏標記回報 · 極簡深色介面<br>讓每一次駕駛都更安全、更安心</p>
                 <div class="hero-buttons">
-                    <a href="#join-beta" class="btn btn-primary"
-                        onclick="document.getElementById('join-beta').scrollIntoView(); return false;">立即加入內測</a>
+                    <a href="#download" class="btn btn-primary"
+                        onclick="document.getElementById('download').scrollIntoView(); return false;">立即下載 App</a>
                     <a href="#features" class="btn btn-secondary">了解更多</a>
                 </div>
             </div>
         </div>
-        <div class="scroll-indicator" onclick="document.getElementById('join-beta').scrollIntoView()">
+        <div class="scroll-indicator" onclick="document.getElementById('download').scrollIntoView()">
             ⌄
         </div>
     </header>
 
-    <section id="join-beta" class="join-beta">
+    <section id="download" class="join-beta">
         <div class="container">
-            <h3 class="section-title">加入 Google 內測計畫</h3>
-            <p class="section-subtitle">目前 App 處於內測階段，請依照以下步驟搶先體驗</p>
+            <h3 class="section-title">立即下載</h3>
+            <p class="section-subtitle">Google Play 商店正式上架，立即體驗智慧駕駛輔助</p>
 
-            <div class="join-cards">
-                <!-- Step 1 -->
-                <div class="join-card">
-                    <div class="step-badge">1</div>
+            <div class="join-cards" style="justify-content: center;">
+                <!-- Download Card -->
+                <div class="join-card" style="max-width: 500px; width: 100%;">
                     <div>
-                        <h4>加入 Google Group</h4>
-                        <p>點擊下方按鈕加入我們的測試小組，取得下載權限。加入後即可獲得 App 的完整使用權限。</p>
+                        <h4>Android 版本</h4>
+                        <p>前往 Google Play 商店免費下載安裝，立即開始您的智慧駕駛體驗。</p>
                     </div>
-                    <a href="https://groups.google.com/g/nokou" target="_blank" class="btn-block btn-group">
-                        <span style="font-size: 1.2em; vertical-align: middle;">👥</span> 加入 Google Group
-                    </a>
-                </div>
-
-                <!-- Step 2 -->
-                <div class="join-card">
-                    <div class="step-badge">2</div>
-                    <div>
-                        <h4>下載應用程式</h4>
-                        <p>加入群組後，前往 Google Play 商店下載安裝。立即開始您的智慧駕駛體驗。</p>
-                    </div>
-                    <a href="https://play.google.com/store/apps/details?id=com.minikao.speed_defense_system"
+                    <a href="https://play.google.com/store/apps/details?id=com.minikao.speed_defense_system&hl=zh_TW"
                         target="_blank" class="btn-block btn-play">
                         <span style="font-size: 1.2em;">▶</span> Google Play 下載
                     </a>
